tried fixing uneven columns in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 30em;
+    margin-bottom: 0;
 }
 
 h1 {
@@ -98,6 +99,12 @@ h1 {
     padding-top: .3em;
 }
 
+.about {
+    text-align: center;
+    color: white;
+    background-color: #f6a56f;
+}
+
 /** LIGHTBOX MARKUP **/
 
 .lightbox {
@@ -105,6 +112,7 @@ h1 {
 	display: none;
 
 	/** Position and style */
+    text-decoration: none;
     position: fixed;
 	width: 100%;
 	height: 100%;
@@ -200,12 +208,16 @@ h1 {
 
 #photos {
     line-height: 0;
-    column-count: 2;
-    column-gap: 0px;
-    -webkit-column-count: 2;
+    -webkit-columns: 2;
     -webkit-column-gap: 0px;
-    -moz-column-count: 2;
+    -moz-columns: 2;
     -moz-column-gap: 0px;
+    columns: 2;
+    column-gap: 0px;
+}
+
+#photos a {
+    display: inline-block;
 }
 
 #photos img {
@@ -243,15 +255,16 @@ h1 {
     }
     
     #photos {
-    line-height: 0;
-    column-count: 3;
-    column-gap: 0px;
-    -webkit-column-count: 3;
+    -webkit-columns: 2;
     -webkit-column-gap: 0px;
-    -moz-column-count: 3;
+    -moz-columns: 2;
     -moz-column-gap: 0px;
-    }
-    
+    columns: 2;
+    column-gap: 0px;
+    -webkit-columns: balance;
+    transform:translateZ(0);
+    -webkit-perspective: 1;
+    }    
     .icons img {
     width: 15%;
     }
@@ -261,6 +274,7 @@ h1 {
     }
 
 }
+
 
 @supports (min-height:100vh) {
 
